<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#673AB7"
    android:gravity="top"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/layout_buttons"
        android:orientation="vertical">

        <EditText
            android:id="@+id/input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:clickable="false"
            android:cursorVisible="true"
            android:focusable="true"
            android:fontFamily="@font/carrois_gothic"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:text="@string/input"
            android:textAlignment="viewEnd"
            android:textColor="@color/white"
            android:textSize="50sp"
            android:verticalScrollbarPosition="right" />

        <EditText
            android:id="@+id/result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:clickable="false"
            android:cursorVisible="true"
            android:focusable="false"
            android:paddingBottom="10dp"
            android:fontFamily="@font/carrois_gothic"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:text="@string/output"
            android:textAlignment="viewEnd"
            android:textColor="#C8C5C5"
            android:textSize="40sp"
            android:verticalScrollbarPosition="right" />

        <android.widget.ImageButton
            android:id="@+id/backspace"
            android:layout_width="100dp"
            android:layout_height="65dp"
            android:layout_gravity="end"
            android:backgroundTint="#673AB7"
            android:clickable="true"
            android:gravity="center"
            android:onClick="btnBackSpace"
            android:scaleType="fitEnd"
            android:src="@drawable/backspace"
            android:tint="#BDBABA" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <android.widget.Button
                android:id="@+id/cancel"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="@drawable/buttons"
                android:fontFamily="@font/carrois_gothic"
                android:gravity="center"
                android:onClick="btnCancel"
                android:text="@string/cancel"
                android:textColor="@color/red"
                android:textSize="40sp"
                android:textStyle="bold" />

            <android.widget.Button
                android:id="@+id/seven"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="@drawable/buttons"
                android:fontFamily="@font/carrois_gothic"
                android:gravity="center"
                android:onClick="btnSeven"
                android:text="@string/seven"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="bold" />

            <android.widget.Button
                android:id="@+id/four"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="@drawable/buttons"
                android:fontFamily="@font/carrois_gothic"
                android:gravity="center"
                android:onClick="btnFour"
                android:text="@string/four"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="bold" />

            <android.widget.Button
                android:id="@+id/one"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="@drawable/buttons"
                android:fontFamily="@font/carrois_gothic"
                android:gravity="center"
                android:onClick="btnOne"
                android:text="@string/one"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="bold" />

            <android.widget.Button
                android:id="@+id/zero_zero"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="@drawable/buttons"
                android:clickable="true"
                android:fontFamily="@font/carrois_gothic"
                android:gravity="center"
                android:onClick="addBrackets"
                android:text="@string/brackets"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <android.widget.Button
                android:id="@+id/degree"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="@drawable/buttons"
                android:fontFamily="@font/carrois_gothic"
                android:gravity="center"
                android:onClick="btnDegree"
                android:text="@string/degree"
                android:textColor="#4CAF50"
                android:textSize="40sp"
                android:textStyle="bold" />

            <android.widget.Button
                android:id="@+id/button8"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="@drawable/buttons"
                android:fontFamily="@font/carrois_gothic"
                android:gravity="center"
                android:onClick="btnEight"
                android:text="@string/eight"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="bold" />

            <android.widget.Button
                android:id="@+id/button5"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="@drawable/buttons"
                android:fontFamily="@font/carrois_gothic"
                android:gravity="center"
                android:onClick="btnFive"
                android:text="@string/five"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="bold" />

            <android.widget.Button
                android:id="@+id/button2"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="@drawable/buttons"
                android:fontFamily="@font/carrois_gothic"
                android:gravity="center"
                android:onClick="btnTwo"
                android:text="@string/two"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="bold" />

            <android.widget.Button
                android:id="@+id/button0"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="@drawable/buttons"
                android:clickable="true"
                android:fontFamily="@font/carrois_gothic"
                android:gravity="center"
                android:onClick="btnZero"
                android:text="@string/zero"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <android.widget.Button
                android:id="@+id/percent"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="@drawable/buttons"
                android:fontFamily="@font/carrois_gothic"
                android:gravity="center"
                android:onClick="btnMod"
                android:text="@string/mod"
                android:textColor="#4CAF50"
                android:textSize="40sp"
                android:textStyle="bold" />

            <android.widget.Button
                android:id="@+id/button9"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="@drawable/buttons"
                android:fontFamily="@font/carrois_gothic"
                android:gravity="center"
                android:onClick="btnNine"
                android:text="@string/nine"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="bold" />

            <android.widget.Button
                android:id="@+id/button6"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="@drawable/buttons"
                android:fontFamily="@font/carrois_gothic"
                android:gravity="center"
                android:onClick="btnSix"
                android:text="@string/six"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="bold" />

            <android.widget.Button
                android:id="@+id/button3"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="@drawable/buttons"
                android:fontFamily="@font/carrois_gothic"
                android:gravity="center"
                android:onClick="btnThree"
                android:text="@string/three"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="bold" />

            <android.widget.Button
                android:id="@+id/dot"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="@drawable/buttons"
                android:clickable="true"
                android:fontFamily="@font/carrois_gothic"
                android:gravity="center"
                android:onClick="btnDot"
                android:text="@string/dot"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <android.widget.Button
                android:id="@+id/divide"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="@drawable/buttons"
                android:fontFamily="@font/carrois_gothic"
                android:gravity="center"
                android:onClick="btnDivide"
                android:text="@string/divide"
                android:textColor="#4CAF50"
                android:textSize="40sp"
                android:textStyle="bold" />

            <android.widget.Button
                android:id="@+id/multiply"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="@drawable/buttons"
                android:fontFamily="@font/carrois_gothic"
                android:gravity="center"
                android:onClick="btnMultiply"
                android:text="@string/multiply"
                android:textColor="#4CAF50"
                android:textSize="40sp"
                android:textStyle="bold" />

            <android.widget.Button
                android:id="@+id/minus"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="@drawable/buttons"
                android:fontFamily="@font/carrois_gothic"
                android:gravity="center"
                android:onClick="btnMinus"
                android:text="@string/minus"
                android:textColor="#4CAF50"
                android:textSize="40sp"
                android:textStyle="bold" />

            <android.widget.Button
                android:id="@+id/plus"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="@drawable/buttons"
                android:fontFamily="@font/carrois_gothic"
                android:gravity="center"
                android:onClick="btnPlus"
                android:text="@string/plus"
                android:textColor="#4CAF50"
                android:textSize="40sp"
                android:textStyle="bold" />

            <android.widget.Button
                android:id="@+id/ans"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="@drawable/equalto"
                android:clickable="true"
                android:fontFamily="@font/carrois_gothic"
                android:gravity="center"
                android:onClick="btnEqual"
                android:text="@string/equal"
                android:textColor="#EFF6F5"
                android:textSize="40sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
